fix: aligning in the center of screen footer ul

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -121,6 +121,7 @@ footer {
     justify-content: center;
     height: 57px;
     position: unset;
+    margin-left: 15%;
   }
 
   .nav-links ul li a {
